// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginCard should render 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer h-52"
      data-testid="Card"
    >
      <div
        class="flex flex-col h-full items-between"
      >
        <div
          class="PluginImage__PluginImageWrapper-iwox49-0 emLkFt mb-4 mr-4"
          data-testid="PluginImage__placeholder"
        >
          <svg>
            plugin-logo-placeholder.svg
          </svg>
        </div>
        <div>
          <div
            class="flex items-center mb-2 space-x-2 text-lg font-semibold text-theme-primary-600"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <div />
          </div>
          <div
            class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            <div
              class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              ARK.io
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="flex items-center"
        />
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex overflow-hidden justify-center w-4"
            >
              <div
                class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                height="1em"
                width="1em"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render grant icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer h-52"
      data-testid="Card"
    >
      <div
        class="flex flex-col h-full items-between"
      >
        <div
          class="PluginImage__PluginImageWrapper-iwox49-0 emLkFt mb-4 mr-4"
          data-testid="PluginImage__placeholder"
        >
          <svg>
            plugin-logo-placeholder.svg
          </svg>
        </div>
        <div>
          <div
            class="flex items-center mb-2 space-x-2 text-lg font-semibold text-theme-primary-600"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <div>
              <div
                class="sc-bdfBwQ iyevwF"
                height="20"
                width="20"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            <div
              class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              ARK.io
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="flex items-center"
        />
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex overflow-hidden justify-center w-4"
            >
              <div
                class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                height="1em"
                width="1em"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should render official icon 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer h-52"
      data-testid="Card"
    >
      <div
        class="flex flex-col h-full items-between"
      >
        <div
          class="PluginImage__PluginImageWrapper-iwox49-0 emLkFt mb-4 mr-4"
          data-testid="PluginImage__placeholder"
        >
          <svg>
            plugin-logo-placeholder.svg
          </svg>
        </div>
        <div>
          <div
            class="flex items-center mb-2 space-x-2 text-lg font-semibold text-theme-primary-600"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <div>
              <div
                class="sc-bdfBwQ fpbFeh"
                height="16"
                width="16"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            <div
              class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              ARK.io
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="flex items-center"
        />
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex overflow-hidden justify-center w-4"
            >
              <div
                class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                height="1em"
                width="1em"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginCard should trigger view 1`] = `
<DocumentFragment>
  <div
    data-testid="PluginCard--ark-explorer"
  >
    <div
      class="Cardstyles__Wrapper-sc-1uddqgb-0 bVJHxj h-52"
      data-testid="Card"
    >
      <div
        class="flex flex-col h-full items-between"
      >
        <div
          class="PluginImage__PluginImageWrapper-iwox49-0 emLkFt mb-4 mr-4"
          data-testid="PluginImage__placeholder"
        >
          <svg>
            plugin-logo-placeholder.svg
          </svg>
        </div>
        <div>
          <div
            class="flex items-center mb-2 space-x-2 text-lg font-semibold text-theme-primary-600"
          >
            <div
              class="truncate"
            >
              ARK Explorer
            </div>
            <div />
          </div>
          <div
            class="flex space-x-4 text-sm text-theme-secondary-500 dark:text-theme-secondary-700"
          >
            <div
              class="pr-4 border-theme-secondary-300 dark:border-theme-secondary-800"
            >
              ARK.io
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      >
        <div
          class="flex items-center"
        />
        <div
          class="relative"
        >
          <span
            data-testid="dropdown__toggle"
          >
            <div
              class="flex overflow-hidden justify-center w-4"
            >
              <div
                class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
                height="1em"
                width="1em"
              >
                <svg>
                  settings.svg
                </svg>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
